--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
+    "fibers": "^5.0.3",
     "prettier": "^3.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "vite": "^4.4.9"
   }
 }
