--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
