--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
     "fibers": "^5.0.3",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.0",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
