--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "cd dist && cp index.html 404.html && cd .. && gh-pages -d dist"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.2",
     "vue": "^3.3.4",
     "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.2.4"
